fixed spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,6 +7,8 @@
   line-height: 1.5;
   color-scheme: light dark;
   background-color: #00041A;
+  margin: 0;
+  padding: 0;
 }
 
 
